--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
     <meta
       name="description"
       content="Pedicure.cabinet"
+      data-rh=”true”
     />
+    <meta name="google-site-verification" content="rotmWJTczUJ6JKDz8zaTypqx2elfiObq1FB87B92hf8" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
